initial alertgroups endpoint
