# api/v2/models/alert_group.go
@@ -1,0 +1,109 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// AlertGroup alert group
+// swagger:model alertGroup
+type AlertGroup struct {
+
+	// alerts
+	Alerts []*GettableAlert `json:"alerts"`
+
+	// group by
+	GroupBy []string `json:"groupBy"`
+
+	// labels
+	Labels LabelSet `json:"labels,omitempty"`
+
+	// receiver
+	Receiver string `json:"receiver,omitempty"`
+}
+
+// Validate validates this alert group
+func (m *AlertGroup) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAlerts(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateLabels(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AlertGroup) validateAlerts(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Alerts) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Alerts); i++ {
+		if swag.IsZero(m.Alerts[i]) { // not required
+			continue
+		}
+
+		if m.Alerts[i] != nil {
+			if err := m.Alerts[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("alerts" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *AlertGroup) validateLabels(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Labels) { // not required
+		return nil
+	}
+
+	if err := m.Labels.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("labels")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AlertGroup) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AlertGroup) UnmarshalBinary(b []byte) error {
+	var res AlertGroup
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
