# api/v2/openapi.yaml
@@ -189,6 +189,49 @@ paths:
           $ref: '#/responses/InternalServerError'
         '400':
           $ref: '#/responses/BadRequest'
+  /alerts/groups:
+    get:
+      tags:
+        - alertgroups
+      operationId: getAlertGroups
+      description: Get a list of alert groups
+      parameters:
+        - in: query
+          name: active
+          type: boolean
+          description: Show active alerts
+          default: true
+        - in: query
+          name: silenced
+          type: boolean
+          description: Show silenced alerts
+          default: true
+        - in: query
+          name: inhibited
+          type: boolean
+          description: Show inhibited alerts
+          default: true
+        - name: filter
+          in: query
+          description: A list of matchers to filter alerts by
+          required: false
+          type: array
+          items:
+            type: string
+        - name: receiver
+          in: query
+          description: A regex matching receivers to filter alerts by
+          required: false
+          type: string
+      responses:
+        '200':
+          description: Get alert groups response
+          schema:
+            '$ref': '#/definitions/alertGroups'
+        '400':
+          $ref: '#/responses/BadRequest'
+        '500':
+          $ref: '#/responses/InternalServerError'
 
 responses:
   BadRequest:
@@ -410,6 +453,25 @@ definitions:
           annotations:
             $ref: '#/definitions/labelSet'
       - $ref: '#/definitions/alert'
+  alertGroups:
+    type: array
+    items:
+      $ref: '#/definitions/alertGroup'
+  alertGroup:
+    type: object
+    properties:
+      labels:
+        $ref: '#/definitions/labelSet'
+      groupBy:
+        type: array
+        items:
+          type: 'string'
+      receiver:
+        type: string
+      alerts:
+        type: array
+        items:
+          $ref: '#/definitions/gettableAlert'
   alertStatus:
     type: object
     properties:
